--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 venv/
+
 web/__pycache__
 __pycache__
+
+.idea/
+.idea/*
+
+lib/
+lib/*
+
+*.py[cod]
+*.pyc
+
+bin/
+bin/*
+
+share/
+share/*
+
+local/
+local/*
+
+include/
+include/*
+
+env/
