--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==6.7
 Flask==1.0.2
 Flask-Assets==0.12
+Flask-JSONRPC==0.3.1
+Flask-SQLAlchemy==2.3.2
 Flask-Script==2.0.6
 itsdangerous==0.24
 Jinja2==2.10
